fixed resizing issue on cycle listing page

--- a/src/pages/cycle-data/cycle-data.html
+++ b/src/pages/cycle-data/cycle-data.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Cycle Data</ion-title>
+  <ion-navbar color="myGreen">
+    <ion-title>{{selectedCycle.name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -23,102 +23,19 @@
       </ion-card-content>
       <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small (click)="goToViewCycleUsePage(material.id)">
+            <button ion-button icon-left clear small color="myGreen" (click)="goToViewCycleUsePage(material.id)">
               <ion-icon name="eye"></ion-icon>
               <div>View</div>
             </button>
           </ion-col>
           <ion-col>
-              <button ion-button icon-left clear small (click)="goToSelectPurchasePage(material.id)">
+              <button ion-button icon-left clear small color="myGreen" (click)="goToSelectPurchasePage(material.id)">
                 <ion-icon name="add-circle"></ion-icon>
                 <div>Use material</div>
               </button>
             </ion-col>
         </ion-row>
     </ion-card>
-    <!--<ion-card>
-      <ion-card-title padding>Planting Material</ion-card-title>
-      <ion-card-content>
-        <p>${{totalAmountSpent | number: '.2-2'}} {{totalAmountSpentMessage}} {{plantMaterial}}</p>
-      </ion-card-content>
-      <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="eye"></ion-icon>
-              <div>View</div>
-            </button>
-          </ion-col>
-          <ion-col>
-              <button ion-button icon-left clear small>
-                <ion-icon name="add-circle"></ion-icon>
-                <div>Use material</div>
-              </button>
-            </ion-col>
-        </ion-row>
-    </ion-card>
-
-    <ion-card>
-      <ion-card-title padding>Chemicals</ion-card-title>
-      <ion-card-content>
-        <p>${{totalAmountSpent | number: '.2-2'}} {{totalAmountSpentMessage}} {{chemical}}</p>
-      </ion-card-content>
-      <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="eye"></ion-icon>
-              <div>View</div>
-            </button>
-          </ion-col>
-          <ion-col>
-              <button ion-button icon-left clear small>
-                <ion-icon name="add-circle"></ion-icon>
-                <div>Use material</div>
-              </button>
-            </ion-col>
-        </ion-row>
-    </ion-card>
-
-    <ion-card>
-      <ion-card-title padding>Fertilizer</ion-card-title>
-      <ion-card-content>
-        <p>${{totalAmountSpent | number: '.2-2'}} {{totalAmountSpentMessage}} {{fertilizer}}</p>
-      </ion-card-content>
-      <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="eye"></ion-icon>
-              <div>View</div>
-            </button>
-          </ion-col>
-          <ion-col>
-              <button ion-button icon-left clear small>
-                <ion-icon name="add-circle"></ion-icon>
-                <div>Use material</div>
-              </button>
-            </ion-col>
-        </ion-row>
-    </ion-card>
-
-    <ion-card>
-      <ion-card-title padding>Soil Ammendments</ion-card-title>
-      <ion-card-content>
-        <p>${{totalAmountSpent | number: '.2-2'}} {{totalAmountSpentMessage}} {{soilAmmendment}}</p>
-      </ion-card-content>
-      <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="eye"></ion-icon>
-              <div>View</div>
-            </button>
-          </ion-col>
-          <ion-col>
-              <button ion-button icon-left clear small>
-                <ion-icon name="add-circle"></ion-icon>
-                <div>Use material</div>
-              </button>
-            </ion-col>
-        </ion-row>
-    </ion-card>-->
 
     <ion-card>
         <ion-card-title padding>Labour</ion-card-title>
@@ -127,40 +44,19 @@
         </ion-card-content>
         <ion-row>
             <ion-col>
-              <button ion-button icon-left clear small (click)="goToTaskListingPage()">
+              <button ion-button icon-left clear small color="myGreen" (click)="goToTaskListingPage()">
                 <ion-icon name="eye"></ion-icon>
                 <div>View</div>
               </button>
             </ion-col>
             <ion-col>
-                <button ion-button icon-left clear small (click)="goToLabourListingPage()">
+                <button ion-button icon-left clear small color="myGreen" (click)="goToLabourListingPage()">
                   <ion-icon name="add-circle"></ion-icon>
                   <div>Assign Labour</div>
                 </button>
               </ion-col>
           </ion-row>
       </ion-card>
-
-    <!--<ion-card>
-      <ion-card-title padding>Other</ion-card-title>
-      <ion-card-content>
-        <p>${{totalAmountSpent | number: '.2-2'}} {{totalAmountSpentMessage}} {{other}}</p>
-      </ion-card-content>
-      <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="eye"></ion-icon>
-              <div>View</div>
-            </button>
-          </ion-col>
-          <ion-col>
-              <button ion-button icon-left clear small>
-                <ion-icon name="add-circle"></ion-icon>
-                <div>Use material</div>
-              </button>
-            </ion-col>
-        </ion-row>
-    </ion-card>-->
 
   </ion-list>
 
