--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -21,7 +21,7 @@
   <p text-center *ngIf="displayEmptyListMessage">No sales made</p>
 
   <ion-list>
-    <ion-card *ngFor="let sale of saleListing">
+    <!-- <ion-card *ngFor="let sale of saleListing">
       <ion-card-title padding>{{sale.crop}}</ion-card-title>
       <ion-card-content>
         <p>Quantity sold: {{sale.quantityOfUnitsSold}}</p>
@@ -29,7 +29,18 @@
         <p>Cost sold for: ${{sale.costPerunit | number: '.2-2'}}</p>
         <p>Date Sold: {{sale.dateSold | date: 'fullDate'}}</p>
       </ion-card-content>
-    </ion-card>
+    </ion-card> -->
+
+    <ion-item *ngFor="let sale of saleListing">
+      <ion-thumbnail item-start>
+        <img src="{{sale.cropImagePath}}" alt="myImage">
+      </ion-thumbnail>
+      <h3>{{sale.crop}}</h3>
+      <p>Quantity sold: {{sale.quantityOfUnitsSold}}</p>
+      <p>Units sold by: {{sale.unitsSoldBy}}</p>
+      <p>Cost sold for: ${{sale.costPerunit | number: '.2-2'}}</p>
+      <p>{{sale.dateSold | date: 'fullDate'}}</p>
+    </ion-item>
   </ion-list>
 
   <ion-fab right bottom>
