Fixed layout and added landunitManager

--- a/src/pages/harvest-listing/harvest-listing.html
+++ b/src/pages/harvest-listing/harvest-listing.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="myGreen">
     <ion-title>Harvest Listing</ion-title>
   </ion-navbar>
 
@@ -25,7 +25,7 @@
       </ion-card-content>
 
       <ion-row padding >
-          <button ion-button block (click)="goToNewSalePage(harvest)">Make Sale <ion-icon name="pricetags"></ion-icon></button>
+          <button ion-button block (click)="goToNewSalePage(harvest)" color="myGreen">Make Sale <ion-icon name="pricetags"></ion-icon></button>
       </ion-row>
     </ion-card>
   </ion-list>
