--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -20,29 +20,6 @@
 
   <p text-center *ngIf="displayEmptyListMessage">No purchases made</p>
   <ion-list>
-    <!--<ion-card *ngFor="let purchase of purchaseListing; let i = index">
-      <ion-card-title padding >{{purchase.typeName}}</ion-card-title>
-      <img src="{{purchase.materialImagePath}}" alt="myImage">
-      <ion-card-content>
-        <p>{{purchase.quantity}} {{purchase.units}}s</p>
-        <p>Cost: {{purchase.cost | currency}}</p>
-        <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
-      </ion-card-content>
-      <ion-row>
-        <ion-col>
-          <button ion-button icon-left clear small (click)="deletePurchase(purchase.id, i)">
-            <ion-icon name="trash"></ion-icon>
-            <div>Delete</div>
-          </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button icon-left clear small (click)="editPurchase(purchase, purchase.id)">
-            <ion-icon ios="md-create" md="md-create"></ion-icon>
-            <div>Edit</div>
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-card>-->
 
     <ion-item *ngFor="let purchase of purchaseList; let i = index">
       <ion-thumbnail item-start>
@@ -50,7 +27,7 @@
       </ion-thumbnail>
       <p>{{purchase.typeName}}</p>
       <p>{{purchase.quantityPurchased}} {{purchase.units}}s</p>
-      <p>Cost: {{purchase.cost | currency}}</p>
+      <p>Cost: ${{purchase.cost | number: '.2-2'}}</p>
       <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
 
       <button ion-button item-right clear icon-only color="main">
