--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,11 +26,9 @@
 
   <ion-list>
     <ion-item *ngFor="let cycle of cycleListing; let i = index">
-      <button item-start (click)="goToCycleDataPage(cycle.id)">
-        <ion-thumbnail>
-          <img src="{{cycle.cropImagePath}}">
-        </ion-thumbnail>
-      </button>
+      <ion-thumbnail item-start (click)="goToCycleDataPage(cycle.id)">
+        <img src="{{cycle.cropImagePath}}">
+      </ion-thumbnail>
       <div (click)="goToCycleDataPage(cycle.id)">
         <p>Name: {{cycle.name}}</p>
         <p>Crop: {{cycle.crop}}</p>
