--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -18,7 +18,7 @@
 
 <ion-content>
 
-  <p text-center *ngIf="displayEmptyListMessage">Create New Purchase to beging</p>
+  <p text-center *ngIf="displayEmptyListMessage">Create New Purchase to begin</p>
   <ion-list>
 
     <ion-item *ngFor="let purchase of purchaseList; let i = index">
@@ -31,7 +31,7 @@
       <p>Cost: ${{purchase.cost | number: '.2-2'}}</p>
       <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
 
-      <button ion-button item-right clear icon-only color="main">
+      <button ion-button item-right clear icon-only (click)="openPurchaseOptionsPopover($event, purchase, i)" color="main">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-item>
