--- a/src/pages/cycle-data/cycle-data.html
+++ b/src/pages/cycle-data/cycle-data.html
@@ -37,7 +37,7 @@
       </ion-card-content>
       <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small color="myGreen" (click)="goToViewCycleUsePage(material.id)">
+            <button ion-button icon-left clear small color="myGreen" (click)="goToViewCycleUsePage(material.id, material.name)">
               <ion-icon name="eye"></ion-icon>
               <div>View</div>
             </button>
