--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -18,4 +18,6 @@
 
   <button ion-button block outline (click)="generateStandardReport()" color="myGreen">Generate standard report</button>
 
+  <button ion-button block outline (click)="generateADBReport()" color="myGreen">Generate ADB Report</button>
+
 </ion-content>
