--- a/ul_web_hooks/android/android_web_hook.html
+++ b/ul_web_hooks/android/android_web_hook.html
@@ -15,8 +15,8 @@ You can just copy-paste them in the <header> section of the appropriate pages of
 -->
 
 <head>
-<link rel="alternate" href="android-app://io.ionic.agriexpense/https/https://fcv9p.app.goo.gl" />
-<link rel="alternate" href="android-app://io.ionic.agriexpense/https/uwi-agriexpense.firebaseapp.com/__/auth/callback" />
+<link rel="alternate" href="android-app://uwi.dcit.AgriExpenseTT/https/https://fcv9p.app.goo.gl" />
+<link rel="alternate" href="android-app://uwi.dcit.AgriExpenseTT/https/uwi-agriexpense.firebaseapp.com/__/auth/callback" />
 
 <!-- Your other stuff from the head tag -->
 </head>
