--- a/src/pages/initialize/initialize.html
+++ b/src/pages/initialize/initialize.html
@@ -36,11 +36,13 @@
       <ion-datetime displayFormat="hh: mm A" name="alarmTime" [(ngModel)]="alarmTime"></ion-datetime>
     </ion-item>
 
-    <button class="center" block ion-button outline color="danger" padding (click)="signInWithGoogle()"> <ion-icon ios="logo-googleplus" md="logo-googleplus"></ion-icon> <span>Google Sign In</span></button>
+    <button class="center" block ion-button outline color="danger" *ngIf="displaySignInButton" padding (click)="signInWithGoogle()"> <ion-icon ios="logo-googleplus" md="logo-googleplus"></ion-icon> <span>Google Sign In</span></button>
+
+    <button class="center" block ion-button outline color="danger" *ngIf="!displaySignInButton" padding><span>Signed In with Google</span></button>
 
     <ion-item padding>
       <ion-label color="primary" stacked>Data Sync Time</ion-label>
-      <ion-datetime displayFormat="hh: mm A" name="dataSyncTime"></ion-datetime>
+      <ion-datetime displayFormat="hh: mm A" name="dataSyncTime" [(ngModel)]="userDataSyncTime"></ion-datetime>
     </ion-item>
 
     <ion-fab right bottom >
